fix text overflow for side-panel list in (IE)

--- a/global/css/side-panel.css
+++ b/global/css/side-panel.css
@@ -277,7 +277,7 @@
 	
 }
 .side-panel .side-list-item-info .first-row {
-	margin: 5px 0;
+	padding: 2px 0;
 
 	color: #5e79a2;
 
@@ -285,10 +285,11 @@
 	overflow: hidden;
 }
 .side-panel .side-list-item-info .second-row {
-	margin: 5px 0;
+	padding: 2px 0;
 
 	color: #555;
 	font-size: 12px;
+	line-height: 1.25em;
 	text-overflow: ellipsis;
 	overflow: hidden;
 }
